added fdr-footwear to portofilo

--- a/index.html
+++ b/index.html
@@ -241,11 +241,23 @@
 
     <div class="all-projects">
       <div class="enter-up project">
+        <img src="./img/fdrfootwear.png" alt="FDR Footwear website screenshot" />
+        <div class="project-up">
+          <div class="project-up-octagon"></div>
+          <div class="project-title"><span>FDR-Footwear</span></div>
+          <button class="info-button" name="0">
+            <svg>
+              <rect></rect>
+            </svg>info
+          </button>
+        </div>
+      </div>
+      <div class="enter-up project">
         <img src="./img/normss.png" alt="Norms app screenshot" />
         <div class="project-up">
           <div class="project-up-octagon"></div>
           <div class="project-title"><span>Norms-app</span></div>
-          <button class="info-button" name="0">
+          <button class="info-button" name="1">
             <svg>
               <rect></rect>
             </svg>info
@@ -257,7 +269,7 @@
         <div class="project-up">
           <div class="project-up-octagon"></div>
           <div class="project-title"><span>CV-Free</span></div>
-          <button class="info-button" name="1">
+          <button class="info-button" name="2">
             <svg>
               <rect></rect>
             </svg>info
@@ -270,7 +282,7 @@
         <div class="project-up">
           <div class="project-up-octagon"></div>
           <div class="project-title"><span>Project-base</span></div>
-          <button class="info-button" name="2">
+          <button class="info-button" name="3">
             <svg>
               <rect></rect>
             </svg>info
@@ -282,7 +294,7 @@
         <div class="project-up">
           <div class="project-up-octagon"></div>
           <div class="project-title"><span>Country-info</span></div>
-          <button class="info-button" name="3">
+          <button class="info-button" name="4">
             <svg>
               <rect></rect>
             </svg>info
@@ -294,7 +306,7 @@
         <div class="project-up">
           <div class="project-up-octagon"></div>
           <div class="project-title"><span>Tech-shop</span></div>
-          <button class="info-button" name="4">
+          <button class="info-button" name="5">
             <svg>
               <rect></rect>
             </svg>info
@@ -306,7 +318,7 @@
         <div class="project-up">
           <div class="project-up-octagon"></div>
           <div class="project-title"><span>Random-color</span></div>
-          <button class="info-button" name="5">
+          <button class="info-button" name="6">
             <svg>
               <rect></rect>
             </svg>info
