refactor: index updated bio and tech

--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
     <h2 class="section-header">About me</h2>
     <div class="enter-up section-content">
       <div class="about-text-and-tech">
-        <p>I'm very excited to learn new technologies and everything around the web. Highly motivated to improve my knowledge and experience. Technologies I am currently learning are node and typescript.<br />
-          <br />
-          I'm looking for an entry-level position as a front-end developer.
+        <p>
+          I'm very excited to learn new technologies and everything around the
+          web. Highly motivated to improve my knowledge and experience.
         </p>
         <br />
         <br />
 
-        <p>These are the technologies I use: </p>
+        <p>These are the technologies I use:</p>
         <div class="tech-list">
           <p>JavaScript</p>
           <p>HTML & CSS</p>
@@ -148,6 +148,9 @@
           <p>React.js</p>
           <p>Bootstrap</p>
           <p>gimp & git</p>
+          <p>typescript</p>
+          <p>material-ui</p>
+          <p>next.js</p>
         </div>
       </div>
       <div class="profile-img">
